--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,14 @@
-h1 {
-    color: blue;
+* {
     font-family: sans-serif;
+}
+
+body, html {
+    height: 100%;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+}
+
+a {
+    text-decoration: none;
 }
