Add Footer component

--- a/src/views/landing-page/details/details.scss
+++ b/src/views/landing-page/details/details.scss
@@ -5,6 +5,7 @@
     align-items: flex-start;
     justify-content: center;
     flex-wrap: wrap;
+    margin-top: 30px;
     .detail {
         text-align: left;
         width: 450px;
