--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -11,6 +11,7 @@
     color: white;
     font-family: sans-serif;
     font-size: 20px;
+    z-index: 10;
     .nav-logo {
         color: white;
         width: 15%;
