--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -33,6 +33,7 @@
         .footer-nav {
             min-width: 300px;
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             .footer-nav-group {
                 min-width: 300px;
@@ -64,4 +65,39 @@
             }
         }
     }
+}
+
+@media (max-width: $breakpoint-med-tablet) {
+    .footer {
+        .footer-content {
+            .footer-brand {
+                display: none;
+                img {
+                    height: 35px;
+                }
+                p {
+                    margin-left: 8px;
+                    font-size: 20px;
+                }
+            }
+            .footer-nav {
+                min-width: 150px;
+                .footer-nav-group {
+                    min-width: 250px;
+                    h2 {
+                        padding: 0px;
+                        font-size: 20px;
+                        line-height: 20px;
+                    }
+                    ul {
+                        padding-left: 5px;
+                        margin: 0px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: $breakpoint-phones) {
 }
