--- a/src/views/landing-page/details/details.scss
+++ b/src/views/landing-page/details/details.scss
@@ -5,7 +5,7 @@
     align-items: flex-start;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 30px;
+    margin: 20px 0px;
     .detail {
         text-align: left;
         width: 450px;
