--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -7,6 +7,7 @@
     align-items: flex-start;
     justify-content: center;
     color: white;
+    height: 100%;
     .footer-content {
         padding: 20px 0px;
         display: flex;
