--- a/src/views/document-area/document-area.scss
+++ b/src/views/document-area/document-area.scss
@@ -1,210 +1,213 @@
-        @import "../../assets/global/_colors.scss";
-        @import "../../assets/global/_mediaQuery.scss";
-        .document-area {
-            width: 100%;
-            padding: 0px;
-            margin: 0px;
-            min-height: 800px;
-            height: 100%;
-            display: flex;
-            position: relative;
-            overflow: hidden;
-            .sidebar {
-                width: 40%;
-                min-width: 300px;
-                box-sizing: border-box;
-                overflow: auto;
-                background: #dbdbdb;
-                margin: 0px;
-                padding: 20px 20px 10px 20px;
-                box-shadow: -2px 0px 15px grey;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-end;
-                .sidebar-nav {
-                    padding-right: 15%;
-                    width: 200px;
-                    .sidebar-item {
-                        align-self: flex-start;
-                        h3 {
-                            font-size: 18px;
-                            color: #5e5d5d;
-                            line-height: 25px;
-                            margin: 5px 0px 0px 0px;
-                            padding: 0px;
-                            &:hover {
-                                cursor: default;
-                            }
-                        }
-                        ul {
-                            list-style-type: none;
-                            padding: 5px 15px 5px 8px;
-                            margin: 0px;
-                            li {
-                                a {
-                                    position: relative;
-                                    color: #797979;
-                                    transition: all 200ms ease-in-out;
-                                    font-size: 16px;
-                                    &.active {
-                                        color: $color_blue;
-                                    }
-                                    &.active::after {
-                                        content: "";
-                                        background: $color_main;
-                                        height: 7px;
-                                        width: 7px;
-                                        position: absolute;
-                                        right: -12px;
-                                        top: 6px;
-                                        border-radius: 50%;
-                                    }
-                                    &:hover {
-                                        cursor: pointer;
-                                        color: $color_blue;
-                                        transition: all 250ms ease-in-out;
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-                .sidebar-button {
-                    display: none;
-                }
-            }
-            .content-area {
-                width: 60%;
-                max-width: 800px;
-                padding: 25px;
-                .content-html {
-                    width: 95%;
-                    max-width: 800px;
-                }
-            }
-            .content-show-button {
-                display: none;
-            }
-        }
-
-        @media (max-width: $breakpoint-large-tablet) {
-            .document-area {
-                min-height: 750px;
-                .sidebar {
-                    width: 300px;
-                    .sidebar-nav {
-                        padding-right: 5%;
-                        width: 170px;
-                        .sidebar-item {
-                            h3 {
-                                font-size: 17px;
-                            }
-                            ul {
-                                padding: 0px 5px 2px 5px;
-                                li {
-                                    a {
-                                        font-size: 15px;
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-                .content-area {
-                    width: 60%;
-                    .content-html {
-                        padding-left: 40px;
-                    }
-                }
-            }
-        }
-
-        @media (max-width: $breakpoint-med-tablet) {
-            .document-area {
-                position: relative;
-                min-height: 600px;
-                .sidebar {
-                    transition: all 400ms ease-in-out;
-                    position: absolute;
-                    left: 0;
-                    top: 0;
-                    width: 300px;
-                    height: 4000px;
-                    min-width: 0px;
-                    &.hide {
-                        transition: all 400ms ease-in-out;
-                        width: 0px;
-                        padding: 0px;
-                    }
-                    .sidebar-nav {
-                        padding-right: 5%;
-                        .sidebar-item {
-                            h3 {
-                                font-size: 17px;
-                            }
-                            ul {
-                                padding: 0px 5px 2px 5px;
-                                li {
-                                    a {
-                                        font-size: 15px;
-                                    }
-                                }
-                            }
-                        }
-                    }
-                    .sidebar-button {
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        position: absolute;
-                        font-size: 20px;
-                        height: 30px;
-                        width: 30px;
-                        right: 10px;
-                        top: 10px;
-                        border-radius: 50%;
-                        color: #5e5d5d;
-                        transition: all 200ms ease-in-out;
-                        &.hide {
-                            transition: all 200ms ease-in-out;
-                        }
-                        &:hover {
-                            cursor: pointer;
-                            color: $color_blue;
-                        }
-                    }
-                }
-                .content-area {
-                    width: 90%;
-                    .content-html {
-                        padding-left: 40px;
-                    }
-                }
-                .content-show-button {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    position: absolute;
-                    font-size: 20px;
-                    height: 40px;
-                    width: 40px;
-                    right: 15px;
-                    top: 15px;
-                    border-radius: 50%;
-                    color: $color_main;
-                    background: #444444;
-                    transition: all 200ms ease-in-out;
-                    box-shadow: 2px 2px 4px grey;
-                    &.hide {
-                        right: -50px;
-                        transition: all 200ms ease-in-out;
-                    }
+@import "../../assets/global/_colors.scss";
+@import "../../assets/global/_mediaQuery.scss";
+.document-area {
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    height: 800px;
+    display: flex;
+    position: relative;
+    overflow: hidden;
+    .sidebar {
+        width: 31%;
+        min-width: 300px;
+        box-sizing: border-box;
+        overflow: auto;
+        background: #dbdbdb;
+        margin: 0px;
+        padding: 20px 20px 10px 20px;
+        box-shadow: -2px 0px 15px grey;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        z-index: 100;
+        .sidebar-nav {
+            padding-right: 15%;
+            width: 200px;
+            .sidebar-item {
+                align-self: flex-start;
+                h3 {
+                    font-size: 18px;
+                    color: #5e5d5d;
+                    line-height: 25px;
+                    margin: 5px 0px 0px 0px;
+                    padding: 0px;
                     &:hover {
-                        cursor: pointer;
-                        transform: translateY(-2px);
-                        transition: all 200ms ease-in-out;
-                        box-shadow: 2px 2px 6px grey;
+                        cursor: default;
+                    }
+                }
+                ul {
+                    list-style-type: none;
+                    padding: 5px 15px 5px 8px;
+                    margin: 0px;
+                    li {
+                        a {
+                            position: relative;
+                            color: #797979;
+                            transition: all 200ms ease-in-out;
+                            font-size: 16px;
+                            &.active {
+                                color: $color_blue;
+                            }
+                            &.active::after {
+                                content: "";
+                                background: $color_main;
+                                height: 7px;
+                                width: 7px;
+                                position: absolute;
+                                right: -12px;
+                                top: 6px;
+                                border-radius: 50%;
+                            }
+                            &:hover {
+                                cursor: pointer;
+                                color: $color_blue;
+                                transition: all 250ms ease-in-out;
+                            }
+                        }
                     }
                 }
             }
         }
+        .sidebar-button {
+            display: none;
+        }
+    }
+    .content-area {
+        width: 70%;
+        padding: 10px 10px 10px 25px;
+        overflow-y: auto;
+        .content-html {
+            max-width: 800px;
+            width: 95%;
+        }
+    }
+    .content-show-button {
+        display: none;
+    }
+}
+
+@media (max-width: $breakpoint-large-tablet) {
+    .document-area {
+        min-height: 750px;
+        .sidebar {
+            min-width: 200px;
+            .sidebar-nav {
+                padding-right: 5%;
+                width: 180px;
+                .sidebar-item {
+                    h3 {
+                        font-size: 17px;
+                    }
+                    ul {
+                        padding: 0px 5px 2px 5px;
+                        li {
+                            a {
+                                font-size: 15px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .content-area {
+            width: 70%;
+            padding: 20px;
+            .content-html {
+                width: 95%;
+            }
+        }
+    }
+}
+
+@media (max-width: $breakpoint-med-tablet) {
+    .document-area {
+        position: relative;
+        min-height: 600px;
+        height: 100%;
+        .sidebar {
+            transition: all 400ms ease-in-out;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 300px;
+            height: 4000px;
+            min-width: 0px;
+            &.hide {
+                transition: all 400ms ease-in-out;
+                width: 0px;
+                padding: 0px;
+            }
+            .sidebar-nav {
+                padding-right: 5%;
+                .sidebar-item {
+                    h3 {
+                        font-size: 17px;
+                    }
+                    ul {
+                        padding: 0px 5px 2px 5px;
+                        li {
+                            a {
+                                font-size: 15px;
+                            }
+                        }
+                    }
+                }
+            }
+            .sidebar-button {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: absolute;
+                font-size: 20px;
+                height: 30px;
+                width: 30px;
+                right: 10px;
+                top: 10px;
+                border-radius: 50%;
+                color: #5e5d5d;
+                transition: all 200ms ease-in-out;
+                &.hide {
+                    transition: all 200ms ease-in-out;
+                }
+                &:hover {
+                    cursor: pointer;
+                    color: $color_blue;
+                }
+            }
+        }
+        .content-area {
+            height: 650px;
+            width: 100%;
+            .content-html {
+                padding: 10px 20px 10px 0px;
+            }
+        }
+        .content-show-button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            font-size: 20px;
+            height: 40px;
+            width: 40px;
+            right: 20px;
+            top: 10px;
+            border-radius: 50%;
+            color: $color_main;
+            background: #444444;
+            transition: all 200ms ease-in-out;
+            box-shadow: 2px 2px 4px grey;
+            &.hide {
+                right: -50px;
+                transition: all 200ms ease-in-out;
+            }
+            &:hover {
+                cursor: pointer;
+                transform: translateY(-2px);
+                transition: all 200ms ease-in-out;
+                box-shadow: 2px 2px 6px grey;
+            }
+        }
+    }
+}
