--- a/src/views/document-area/markdown.scss
+++ b/src/views/document-area/markdown.scss
@@ -4,8 +4,9 @@
     z-index: -20;
     code {
         background: #d6d6d6;
-        padding: 1px 5px;
-        color: #5d5dff;
+        padding: 2px 6px;
+        color: #0265b1;
+        border-radius: 3px;
         border-radius: 3px;
     }
     pre {
@@ -31,6 +32,19 @@
         margin: 0px;
         padding: 5px 15px 5px 25px;
         z-index: -100;
+        code {
+            background: #fcdc8a;
+            color: #332500;
+        }
+    }
+    a {
+        color: #0697f8;
+        font-weight: 700;
+        transition: all 200ms ease-in-out;
+        &:hover {
+            color: #0680d1;
+            transition: all 200ms ease-in-out;
+        }
     }
     table {
         color: #333;
