Add beginning of controller documentation

--- a/src/views/document-area/markdown.scss
+++ b/src/views/document-area/markdown.scss
@@ -48,6 +48,7 @@
     }
     sup {
         a {
+            padding-left: 1px;
             color: #b685fc;
             font-size: 11px;
         }
